--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AALIYA KAMINI Thara Cleaning Services</title>
+    <title>Thara Cleaning Services</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="text-center font-sans">
     <!-- Header -->
     <section class="text-white py-12" style="background: linear-gradient(90deg, rgba(8,50,89,1) 26%, rgba(0,101,189,1) 57%, rgba(23,129,181,1) 77%);">
-        <h1 class="text-5xl font-bold">Thara Cleaning Services</h1>
+        <h1 class="text-5xl font-bold">AALIYA KAMINI Thara Cleaning Services</h1>
         <p class="text-lg mt-2">Reliable, Professional, and Affordable Cleaning</p>
         <button id="quoteButton" class="mt-4 px-8 py-3 bg-white text-blue-800 font-semibold rounded-md hover:bg-gray-100">Book Now</button>
     </section>
